# sigma-driver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  apex.cpp  apex.h  enum.h  log.cpp  schema.cpp  sigma_camera_test.cpp  sigma_ptp.cpp  sigma_ptp.h
.github/ISSUE_TEMPLATE/: issue_template-md.md
.github/workflows/: cmake-single-platform.yml  cmake.yml  packages.yml
debian/: changelog  control  rules
examples/: sigma_bulb_example.cpp  sigma_capture_example.cpp
include/ptp/: fake_transport.h  ptp.h  utils.h
include/sigma/: enum.h  log.h  schema.h  sigma_ptp.h
include/utils/: log.h  utils.h
ptp/: ptp.cpp  transport.h  usb_transport.cpp  usb_transport.h
rpm/: sigma-driver.spec
src/: apex.cpp  log.cpp  schema.cpp  sigma_ptp.cpp
src/ptp/: fake_transport.cpp  ptp.cpp  usb_transport.cpp
src/sigma/: schema.cpp  sigma_ptp.cpp
src/utils/: apex.cpp  log.cpp
tests/: CMakeLists.txt  fake_transport.h
tests/integration/: cam_tests.cpp
tests/tests/: utils.h
tests/unit/: apex_tests.cpp  schema_tests.cpp
